initial test of vertical cuts

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,6 +5,7 @@ parts =
     py
     batik_download
     batik
+    test
 newest = false
 
 [scripts]
@@ -26,3 +27,8 @@ md5sum = 2c2fd523607993dbcef8b5961fba0550
 recipe = collective.recipe.cmd
 on_install = true
 cmds = jar xvf ${buildout:parts-directory}/batik_download/batik-1.7.zip
+
+[test]
+recipe = pbp.recipe.noserunner
+eggs = scissors
+defaults = -v
